进程状态在标签显示不同的颜色, 崩溃提示

--- a/ServiceMonitor.csproj
+++ b/ServiceMonitor.csproj
@@ -96,6 +96,9 @@
     <Compile Include="TextDialog.Designer.cs">
       <DependentUpon>TextDialog.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="LogView.resx">
+      <DependentUpon>LogView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MonitorView.resx">
       <DependentUpon>MonitorView.cs</DependentUpon>
     </EmbeddedResource>
